<resources>
    <string name="app_name">Asymmetric Encryption</string>
    <string name="crypted_text">JD9yPcl4tgrQULf1HfKcFW4zT4w0Isb/Dg38h+7gCZNFrSmDxlNAePHQDFqzbax9zMwD1dqiA6rxnWdO1I3NLwjYMbbocYiZkLMH5xbKt4jODyTmJylUNBBacPrLzV8yEBff7C+Cm/veMJEYBe8Qafzr0zeWxv1W4DTJ1yDKnWc</string>
    <string name="input">input</string>
    <string name="decrypt">decrypt</string>
    <string name="result">Result</string>
    <string name="privateKey">MIICdgIBADANBgkqhkiG9w0BAQEFAASCAmAwggJcAgEAAoGBAKs164xhodihpp2c8K0zGNAZqLFP3yqEw1VkXeilyz0TdGWFyE+WvhRfGNwbJMxA3h5P+UyVFzMAI5PDcJjyUTuWBKzGFkakVdcoMdNxW29XYmai78vaSfJ9jsWyakuV7HHJP/2clJNITCmhH2Pv/oUw5kNsEojRIr/PkAhymPx/AgMBAAECgYAPwt56JWYXVxugsy5q22MuNnZ+SuU3TlKHHWlnE0Ay/AQBRpVqp5dnBlwiWHNaREx5C5Feg0kdSPwoIbFPZdtOvda23C8WiGO9caQ92fNJo+z1jwCWFAM02UHg3rsoE/gHFmErwnvpLzmR4aB9O7XLOs0lcfTxhcs2RORbpuZFmQJBAPIaiwx2V3PuV0rMXeqmwDIQviw2/dXZD55MVJ5knxGKQ4ZI8b+S2zStZNdFjCv/7IJsz4GsGLV9VDiTbViQNCkCQQC1Ca278lI70GRCvNAeID7nXvYREANzBzcGCjiIZB8p0mPZptYv6zytpSEHDPVPpP8Z/t6/jGbBe2yIdJZ+dABnAkApakb9E8V0DIKcRgeO24WnStvtXl7f1Sjp0G7tRZM8geV5NEM+nVWoVj0Y4knPQRFpYknBCfqUGWNt5jJfYxO5AkA8W5+6282i95WV0pGomaOfTD/J7IbZ4PvtXZb/kjH5pZV4yXD7xPgUBMwAJ8fZ5+7NYfYt8seHlnjW/df3DQHdAkEA4UGfrC/e9n8eeSzkFAy3wAedLSFypqkr134KeAUVknxAPc6u89JmIM4fkIH0BtMyqZWGxd3zgxYarlFl05ltjg</string>
    <string name="private_key">Private Key</string>
</resources>